April 25th midday

--- a/www/pages/home/home.html
+++ b/www/pages/home/home.html
@@ -80,6 +80,7 @@
         <attachment-post ng-switch-when="attachment" post="p"></attachment-post>
         <video-post ng-switch-when="video" post="p"></video-post>
         <album-post ng-switch-when="album" post="p"></album-post>
+        <profile-post ng-switch-when="profile" post="p"></profile-post>
       </div>
     </ion-list>
 
