--- a/www/pages/home/post-types/profile/profile.html
+++ b/www/pages/home/post-types/profile/profile.html
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <div class="row row-no-padding" style="margin-bottom:10px" ng-show="vm.post.post.files[2]">
+        <!--<div class="row row-no-padding" style="margin-bottom:10px" ng-show="vm.post.post.files[2]">
             <div class="col col-50 album-image" style="margin-right:5px" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.post.files[1].file_path}})'}">
             </div>
             <div class="col col-50 album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.post.files[2].file_path}})'}">
@@ -66,7 +66,7 @@
             </div>
             <div class="col col-33 album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.post.files[5].file_path}})'}">
             </div>
-        </div>
+        </div>-->
 
     </div>
 
@@ -78,7 +78,7 @@
             </div>
         </div>
 
-        <div class="row row-no-padding" style="margin-bottom:10px" ng-show="vm.post.shared_post.files[2]">
+        <!--<div class="row row-no-padding" style="margin-bottom:10px" ng-show="vm.post.shared_post.files[2]">
             <div class="col col-50 album-image" style="margin-right:5px" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.shared_post.files[1].file_path}})'}">
             </div>
             <div class="col col-50 album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.shared_post.files[2].file_path}})'}">
@@ -92,7 +92,7 @@
             </div>
             <div class="col col-33 album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.shared_post.files[5].file_path}})'}">
             </div>
-        </div>
+        </div>-->
 
     </div>
 
