--- a/www/pages/home/post-types/audio/audio.html
+++ b/www/pages/home/post-types/audio/audio.html
@@ -1,142 +1,151 @@
-  <div class="card">
+<div class="card">
 
-        <ion-item class="item item-borderless">
-              <div class="row">
-                <!--profile image-->
+    <ion-item class="item item-borderless">
+        <div class="row">
+            <!--profile image-->
+            <div>
+                <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.post.owner_info.avatar}})">
+                    <div class="pp-top"></div>
+                    <div class="pp-Bottom"></div>
+                </div>
+            </div>
+
+            <!--profile name-->
+            <div class="col">
+                <div style="padding-left:10px">
                     <div>
-                        <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.post.owner_info.avatar}})">
-                           <div class="pp-top"></div>
-                           <div class="pp-Bottom"></div>
-                        </div>
-                   </div>
+                        <span style="font-size: 14px; color:#22c064">{{vm.post.post.owner_info.full_name}}</span>
+                        <span style="font-size: 12px" ng-if="vm.post.post.isShared"> shared an audio</span>
+                        <span style="font-size: 12px" ng-if="vm.post.post.taggedUsers.length > 0">
+                            with 
+                            <span ng-if="vm.post.post.taggedUsers.length > 2">
+                                <a href="{{vm.apiurl + vm.post.post.taggedUsersInfo[0].url}}">{{vm.post.post.taggedUsersInfo[0].full_name}}, </a>
+                                <a href="{{vm.apiurl + vm.post.post.taggedUsersInfo[1].url}}">{{vm.post.post.taggedUsersInfo[1].full_name}}</a>
+                                {{vm.post.post.taggedUsers.length - 2}} more people 
+                            </span>
+                        <a ng-if="vm.post.post.taggedUsers.length <= 2" ng-repeat="tuser in vm.post.post.taggedUsersInfo" href="{{vm.apiurl + tuser.url}}">{{tuser.full_name}} </a>
+                        </span>
+                    </div>
 
-               <!--profile name-->
-                   <div class="col">
-                       <div style="padding-left:10px">
-                            <div>
-                                <span style="font-size: 14px; color:#22c064">{{vm.post.post.owner_info.full_name}}</span>
-                                <span style="font-size: 12px" ng-if="vm.post.post.isShared"> shared an post</span>
-                            </div>
+                    <!--date-->
+                    <p style="white-space:normal; font-size:10px">{{vm.post.post.created_at.diffForHumans}}</p>
+                </div>
+            </div>
+        </div>
+    </ion-item>
 
-                        <!--date-->
-                            <p style="white-space:normal; font-size:10px">{{vm.post.post.created_at.diffForHumans}}</p>
-                      </div>
-                 </div>
-             </div>
-        </ion-item>
-
-      <!-- <ion-item class="item-avatar item-icon-right" id="home-list-item15">
+    <!-- <ion-item class="item-avatar item-icon-right" id="home-list-item15">
           <img ng-src="{{vm.apiurl}}{{vm.post.post.owner_info.avatar}}">
           <h2>{{vm.post.post.owner_info.full_name}}<span style="font-size: 14px;" ng-if="vm.post.post.isShared"> shared a post</span></h2>
           <p style="white-space:normal;">{{vm.post.post.created_at.diffForHumans}}</p>
 
       </ion-item> -->
-      
-      <div class="card" style="margin:10px">
-          <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
-              {{vm.post.post.text_body}}
-          </div>
-          <div class="item item-icon-left" ng-repeat="file in vm.post.post.files">
-              <i class="icon ion-headphone"></i>
-              <audio controls>
-                  <source ng-src="{{vm.trustSrc(vm.apiurl+'/uploads/media/'+file.file_path)}}">
-              </audio>
-          </div>
-      </div>
 
-      <div class="card" style="margin:10px" ng-if="vm.post.post.isShared">
-          <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
-              {{vm.post.post.text_body}}
-          </div>
-          <div class="item item-icon-left" ng-repeat="file in vm.post.shared_post.files">
-              <i class="icon ion-headphone"></i>
-              <audio controls>
-                  <source ng-src="{{vm.trustSrc(vm.apiurl+'/uploads/media/'+file.file_path)}}">
-              </audio>
-          </div>
-      </div>
+    <div class="card" style="margin:10px">
+        <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
+            {{vm.post.post.text_body}}
+        </div>
+        <div class="item item-icon-left" ng-repeat="file in vm.post.post.files">
+            <i class="icon ion-headphone"></i>
+            <audio controls>
+                <source ng-src="{{vm.trustSrc(vm.apiurl+'/uploads/media/'+file.file_path)}}">
+            </audio>
+        </div>
+    </div>
+
+    <div class="card" style="margin:10px" ng-if="vm.post.post.isShared">
+        <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''">
+            {{vm.post.post.text_body}}
+        </div>
+        <div class="item item-icon-left" ng-repeat="file in vm.post.shared_post.files">
+            <i class="icon ion-headphone"></i>
+            <audio controls>
+                <source ng-src="{{vm.trustSrc(vm.apiurl+'/uploads/media/'+file.file_path)}}">
+            </audio>
+        </div>
+    </div>
 
 
 
-      <!--if shared post-->
+    <!--if shared post-->
 
-        <div class="row card" ng-if="vm.post.post.isShared" style="margin:15px">
+    <div class="row card" ng-if="vm.post.post.isShared" style="margin:15px">
 
-              <!--profile image-->
-                  <div>
-                      <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.shared_post.originator_info.avatar}})">
-                         <div class="pp-top"></div>
-                         <div class="pp-Bottom"></div>
-                      </div>
-                 </div>
+        <!--profile image-->
+        <div>
+            <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.shared_post.originator_info.avatar}})">
+                <div class="pp-top"></div>
+                <div class="pp-Bottom"></div>
+            </div>
+        </div>
 
-                 <!--profile name-->
-                     <div class="col">
-                         <div style="padding-left:10px">
-                              <div>
-                                  <span style="font-size: 14px; color:#22c064">{{vm.post.shared_post.originator_info.full_name}}</span>
-                                  <!-- <span style="font-size: 12px">{{vm.post.shared_post.edit_text_body}}</span> -->
-                              </div>
+        <!--profile name-->
+        <div class="col">
+            <div style="padding-left:10px">
+                <div>
+                    <span style="font-size: 14px; color:#22c064">{{vm.post.shared_post.originator_info.full_name}}</span>
+                    <!-- <span style="font-size: 12px">{{vm.post.shared_post.edit_text_body}}</span> -->
+                </div>
 
-                          <!--date-->
-                              <p style="white-space:normal; font-size:10px">{{vm.post.post.created_at.diffForHumans}}</p>
-                        </div>
-                   </div>
-                <!-- <div class="col col-90">
+                <!--date-->
+                <p style="white-space:normal; font-size:10px">{{vm.post.post.created_at.diffForHumans}}</p>
+            </div>
+        </div>
+        <!-- <div class="col col-90">
                     <div class="item item-avatar item-text-wrap">
                         <img ng-src="{{vm.apiurl}}{{vm.post.shared_post.originator_info.avatar}}"/>
                         <h2>{{vm.post.shared_post.originator_info.full_name}}</h2>
                         <p>{{vm.post.shared_post.edit_text_body}}</p>
                     </div>
                 </div> -->
-            </div>
+    </div>
 
-      <!--if shared post-->
-
-
+    <!--if shared post-->
 
 
-      <!-- Like, comment, share and view more -->
-          <div class="row item item-borderless" >
-            <!--like-->
-              <div class="col">
-                <div class="like-comment-share">
-                  <a ng-click="vm.likePost()">
+
+
+    <!-- Like, comment, share and view more -->
+    <div class="row item item-borderless">
+        <!--like-->
+        <div class="col">
+            <div class="like-comment-share">
+                <a ng-click="vm.likePost()">
                     <i class="icon ion-heart" style="font-size:10px; vertical-align:middle;"> Like</i>
-                  </a>
-                  <span style="font-size:10px"> ({{vm.post.post.likes}})</span>
-                </div>
-              </div>
+                </a>
+                <span style="font-size:10px"> ({{vm.post.post.likes}})</span>
+            </div>
+        </div>
 
-            <!--comment-->
-              <div ui-sref="app.tabs.comments" class="col">
-                <div class="like-comment-share">
-                  <a ng-click="vm.goToCommentPage('audio')">
+        <!--comment-->
+        <div ui-sref="app.tabs.comments" class="col">
+            <div class="like-comment-share">
+                <a ng-click="vm.goToCommentPage('audio')">
                     <i class="icon ion-ios-chatbubble" style="font-size:10px; vertical-align:middle;"> Comment</i>
-                  </a>
-                  <span style="font-size:10px"> ({{vm.post.post.comments}})</span>
-                </div>
-              </div>
+                </a>
+                <span style="font-size:10px"> ({{vm.post.post.comments}})</span>
+            </div>
+        </div>
 
-            <!--Share-->
-              <div class="col">
-                  <div class="like-comment-share">
-                    <a >
-                      <i class="icon ion-android-share-alt" style="font-size:10px; vertical-align:middle;"> Share</i>
-                    </a>
-                    <span style="font-size:10px"> ({{vm.post.post.shares}})</span>
-                  </div>
-              </div>
+        <!--Share-->
+        <div class="col">
+            <div class="like-comment-share">
+                <a>
+                    <i class="icon ion-android-share-alt" style="font-size:10px; vertical-align:middle;"> Share</i>
+                </a>
+                <span style="font-size:10px"> ({{vm.post.post.shares}})</span>
+            </div>
+        </div>
 
-              <!--Edit-->
-              <div class="col">
-                <div style="padding-left: 10px; width: 100%; text-align: right;">
-                  <a class="item-icon-right" ng-click="vm.showPopover($event)">
+        <!--Edit-->
+        <div class="col">
+            <div style="padding-left: 10px; width: 100%; text-align: right;">
+                <a class="item-icon-right" ng-click="vm.showPopover($event)">
                     <i class="icon ion-android-more-vertical" style="font-size:12px; vertical-align:middle"></i>
-                  </a>
-                </div>
-              </div>
-          </div>
-      <!-- Like, comment, share and view more -->
+                </a>
+            </div>
+        </div>
+    </div>
+    <!-- Like, comment, share and view more -->
 
-  </div>
+</div>
