--- a/www/pages/home/post-types/image/image.html
+++ b/www/pages/home/post-types/image/image.html
@@ -3,27 +3,36 @@
     <ion-item class="item item-borderless">
 
         <div class="row">
-          <!--profile image-->
-              <div>
-                  <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.post.owner_info.avatar}})">
-                     <div class="pp-top"></div>
-                     <div class="pp-Bottom"></div>
-                  </div>
-             </div>
+            <!--profile image-->
+            <div>
+                <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.post.owner_info.avatar}})">
+                    <div class="pp-top"></div>
+                    <div class="pp-Bottom"></div>
+                </div>
+            </div>
 
-             <div class="col">
-                 <div style="width:100%; padding: 5px 0 0 15px">
-                      <div>
-                          <span style="font-size: 14px; color:#22c064">{{vm.post.post.owner_info.full_name}}</span>
-                          <span style="font-size: 12px" ng-if="vm.post.post.isShared"> shared an post</span>
-                      </div>
+            <div class="col">
+                <div style="width:100%; padding: 5px 0 0 15px">
+                    <div>
+                        <span style="font-size: 14px; color:#22c064">{{vm.post.post.owner_info.full_name}}</span>
+                        <span style="font-size: 12px" ng-if="vm.post.post.isShared"> shared an image</span>
+                        <span style="font-size: 12px" ng-if="vm.post.post.taggedUsers.length > 0">
+                            with 
+                            <span ng-if="vm.post.post.taggedUsers.length > 2">
+                                <a href="{{vm.apiurl + vm.post.post.taggedUsersInfo[0].url}}">{{vm.post.post.taggedUsersInfo[0].full_name}}, </a>
+                                <a href="{{vm.apiurl + vm.post.post.taggedUsersInfo[1].url}}">{{vm.post.post.taggedUsersInfo[1].full_name}}</a>
+                                {{vm.post.post.taggedUsers.length - 2}} more people 
+                            </span>
+                        <a ng-if="vm.post.post.taggedUsers.length <= 2" ng-repeat="tuser in vm.post.post.taggedUsersInfo" href="{{vm.apiurl + tuser.url}}">{{tuser.full_name}} </a>
+                        </span>
+                    </div>
 
-                  <!--date-->
-                      <p style="white-space:normal; font-size:10px">{{vm.post.post.created_at.diffForHumans}}</p>
+                    <!--date-->
+                    <p style="white-space:normal; font-size:10px">{{vm.post.post.created_at.diffForHumans}}</p>
                 </div>
             </div>
         </div>
-   </ion-item>
+    </ion-item>
     <!-- <ion-item class="item-avatar item-icon-right" id="home-list-item15">
               <img ng-src="{{vm.apiurl}}{{vm.post.post.owner_info.avatar}}">
               <h2>{{vm.post.post.owner_info.full_name}}<span style="font-size: 14px;" ng-if="vm.post.post.isShared"> shared a post</span></h2>
@@ -50,28 +59,28 @@
 
 
     <!--if shared post-->
-      <div class="row card" ng-if="vm.post.post.isShared" style="margin:15px">
+    <div class="row card" ng-if="vm.post.post.isShared" style="margin:15px">
         <!--profile image-->
-            <div>
-                <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.shared_post.originator_info.avatar}})">
-                   <div class="pp-top"></div>
-                   <div class="pp-Bottom"></div>
+        <div>
+            <div class="profile_image" style="background-image: url({{vm.apiurl}}{{vm.post.shared_post.originator_info.avatar}})">
+                <div class="pp-top"></div>
+                <div class="pp-Bottom"></div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div style="width:100%; padding: 5px 0 0 15px">
+                <div>
+                    <span style="font-size: 14px; color:#22c064">{{vm.post.shared_post.originator_info.full_name}}</span>
+
                 </div>
-           </div>
-
-           <div class="col">
-               <div style="width:100%; padding: 5px 0 0 15px">
-                    <div>
-                        <span style="font-size: 14px; color:#22c064">{{vm.post.shared_post.originator_info.full_name}}</span>
-
-                    </div>
                 <!--date-->
-                    <p style="white-space:normal; font-size:10px">{{vm.post.post.created_at.diffForHumans}}</p>
-                    <p>{{vm.post.shared_post.edit_text_body}}</p>
-              </div>
-          </div>
-      </div>
-        <!-- <div class="col col-10"></div>
+                <p style="white-space:normal; font-size:10px">{{vm.post.post.created_at.diffForHumans}}</p>
+                <p>{{vm.post.shared_post.edit_text_body}}</p>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="col col-10"></div>
         <div class="col col-90">
             <div class="item item-avatar item-text-wrap">
                 <img ng-src="{{vm.apiurl}}{{vm.post.shared_post.originator_info.avatar}}"/>
@@ -79,51 +88,51 @@
                 <p>{{vm.post.shared_post.edit_text_body}}</p>
             </div>
         </div> -->
-        
+
     <!--if shared post-->
 
 
     <!-- Like, comment, share and view more -->
-        <div class="row item item-borderless" >
-          <!--like-->
-            <div class="col">
-              <div class="like-comment-share">
+    <div class="row item item-borderless">
+        <!--like-->
+        <div class="col">
+            <div class="like-comment-share">
                 <a ng-click="vm.likePost()">
-                  <i class="icon ion-heart" style="font-size:10px; vertical-align:middle;"> Like</i>
+                    <i class="icon ion-heart" style="font-size:10px; vertical-align:middle;"> Like</i>
                 </a>
                 <span style="font-size:10px"> ({{vm.post.post.likes}})</span>
-              </div>
-            </div>
-
-          <!--comment-->
-            <div ui-sref="app.tabs.comments" class="col">
-              <div class="like-comment-share">
-                <a ng-click="vm.goToCommentPage('image')">
-                  <i class="icon ion-ios-chatbubble" style="font-size:10px; vertical-align:middle;"> Comment</i>
-                </a>
-                <span style="font-size:10px"> ({{vm.post.post.comments}})</span>
-              </div>
-            </div>
-
-          <!--Share-->
-            <div class="col">
-                <div class="like-comment-share">
-                  <a >
-                    <i class="icon ion-android-share-alt" style="font-size:10px; vertical-align:middle;"> Share</i>
-                  </a>
-                  <span style="font-size:10px"> ({{vm.post.post.shares}})</span>
-                </div>
-            </div>
-
-            <!--Edit-->
-            <div class="col">
-              <div style="padding-left: 10px; width: 100%; text-align: right;">
-                <a class="item-icon-right" ng-click="vm.showPopover($event)">
-                  <i class="icon ion-android-more-vertical" style="font-size:12px; vertical-align:middle"></i>
-                </a>
-              </div>
             </div>
         </div>
+
+        <!--comment-->
+        <div ui-sref="app.tabs.comments" class="col">
+            <div class="like-comment-share">
+                <a ng-click="vm.goToCommentPage('image')">
+                    <i class="icon ion-ios-chatbubble" style="font-size:10px; vertical-align:middle;"> Comment</i>
+                </a>
+                <span style="font-size:10px"> ({{vm.post.post.comments}})</span>
+            </div>
+        </div>
+
+        <!--Share-->
+        <div class="col">
+            <div class="like-comment-share">
+                <a>
+                    <i class="icon ion-android-share-alt" style="font-size:10px; vertical-align:middle;"> Share</i>
+                </a>
+                <span style="font-size:10px"> ({{vm.post.post.shares}})</span>
+            </div>
+        </div>
+
+        <!--Edit-->
+        <div class="col">
+            <div style="padding-left: 10px; width: 100%; text-align: right;">
+                <a class="item-icon-right" ng-click="vm.showPopover($event)">
+                    <i class="icon ion-android-more-vertical" style="font-size:12px; vertical-align:middle"></i>
+                </a>
+            </div>
+        </div>
+    </div>
     <!-- Like, comment, share and view more -->
 
 </div>
