--- a/www/pages/code-confirmation/code-confirm.html
+++ b/www/pages/code-confirmation/code-confirm.html
@@ -11,12 +11,18 @@
 
     <form name="signinForm" novalidate class="list" style="margin:5%">
 
-      <!-- Username-->
-      <div class="list">
-        <label class="item item-input" style="border-radius:10px; border-width: 1.5px; border-style: solid; border-color:#ffffff; background-color: #ffffff;">
-                        <i class="icon ion-ios-person placeholder-icon" style="color:#37c673; font-size:20px"></i>
-                        <input type="text" placeholder="User Name" style="color:#0b883f; padding-bottom:2px; font-size:14px;" ng-model="vm.signinData.username">
-                </label>
+      <!--code confirm-->
+      <div>
+            <div class="row row-wrap row-center" style="">
+                <form>
+                     <input maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
+                     <input maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
+                     <input maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
+                     <input maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
+                     <input maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
+                     <input maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
+                </form>
+            </div>
       </div>
 
       <button ng-click="vm.confirm()" class="button button-light button-block" style="border-radius: 10px;"><span style="color:#22c064">Confirm</span></button>
@@ -25,6 +31,6 @@
 
 
     <button ui-sref="forgot-pass" class="button button-light button-small button-block button-clear"><b>Didn't get the code yet? Resend<b></button>
-    
+
   </ion-content>
 </ion-view>
