--- a/www/pages/code-confirmation/code-confirm.html
+++ b/www/pages/code-confirmation/code-confirm.html
@@ -1,4 +1,4 @@
-<ion-view title="Confirm Code" hide-nav-bar="true" hide-back-button="true" id="page4">
+<ion-view title="Confirm Code" hide-nav-bar="true" hide-back-button="true">
   <ion-content padding="true" class="manual-ios-statusbar-padding background" scroll="false">
     <div class="spacer" style="width: 300px; height: 25px;"></div>
 
@@ -9,18 +9,19 @@
     <div class="spacer" style="width: 300px; height: 25px;"></div>
 
 
-    <form name="signinForm" novalidate class="list" style="margin:5%">
+    <form name="signinForm" novalidate style="margin:5%">
 
       <!--code confirm-->
       <div>
-            <div class="row row-wrap row-center" style="">
+            <div style="width:100%; text-align:center; font-size:15px; color: white; padding:10px"><b>Enter code<b></div>
+            <div class="row row-no-padding row-wrap">
                 <form>
-                     <input maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
-                     <input maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
-                     <input maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
-                     <input maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
-                     <input maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
-                     <input maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
+                     <input class="col" maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
+                     <input class="col" maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
+                     <input class="col" maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
+                     <input class="col" maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
+                     <input class="col" maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
+                     <input class="col" maxlength="1" placeholder="" type="text" style="text-align:center; width: 30px; height: 40px; margin:5px"></input>
                 </form>
             </div>
       </div>
