--- a/www/pages/home/post-types/profile/profile.html
+++ b/www/pages/home/post-types/profile/profile.html
@@ -13,9 +13,10 @@
             <!--profile name-->
             <div class="col">
                 <div style="width:100%; padding: 5px 0 0 15px">
-                    <div>
+                    <div class="item-text-wrap">
                         <span style="font-size: 14px; color:#22c064">{{vm.post.post.owner_info.full_name}}</span>
-                        <span style="font-size: 12px" ng-if="vm.post.post.isShared"> shared an album</span>
+                        <span style="font-size: 12px" ng-if="vm.post.post.isShared"> shared a post</span>
+                        <span style="font-size: 12px" ng-if="!vm.post.post.isShared">{{vm.post.post.attributes.activity}}</span>
                         <span style="font-size: 12px" ng-if="vm.post.post.taggedUsers.length > 0">
                             with 
                             <span ng-if="vm.post.post.taggedUsers.length > 2">
@@ -25,6 +26,8 @@
                             </span>
                         <a ng-if="vm.post.post.taggedUsers.length <= 2" ng-repeat="tuser in vm.post.post.taggedUsersInfo" href="{{vm.apiurl + tuser.url}}">{{tuser.full_name}} </a>
                         </span>
+                        <span style="font-size: 12px" ng-if="vm.post.post.attributes.activity"> <img ng-if="vm.post.post.attributes.feelText" ng-src="{{vm.apiurl + '/css/icons/now/' + vm.post.post.attributes.feelText}}"> {{vm.post.post.attributes.activity}}</span>
+                        <span style="font-size: 12px" ng-if="vm.post.post.attributes.userLocation"> at {{vm.post.post.attributes.userLocation}}</span>
                     </div>
 
                     <!--date-->
@@ -34,12 +37,7 @@
 
         </div>
     </ion-item>
-    <!-- <ion-item class="item-avatar item-icon-right" id="home-list-item15">
-                <img ng-src="{{vm.apiurl}}{{vm.post.post.owner_info.avatar}}">
-                <h2>{{vm.post.post.owner_info.full_name}}<span style="font-size: 14px;" ng-if="vm.post.post.isShared"> shared a post</span></h2>
-                <p style="white-space:normal;">{{vm.post.post.created_at.diffForHumans}}</p>
 
-            </ion-item> -->
     <div class="item item-text-wrap" ng-if="vm.post.post.text_body !== ''" ng-bind-html="vm.post.post.text_body">
 
     </div>
@@ -52,22 +50,6 @@
             </div>
         </div>
 
-        <!--<div class="row row-no-padding" style="margin-bottom:10px" ng-show="vm.post.post.files[2]">
-            <div class="col col-50 album-image" style="margin-right:5px" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.post.files[1].file_path}})'}">
-            </div>
-            <div class="col col-50 album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.post.files[2].file_path}})'}">
-            </div>
-        </div>
-
-        <div class="row row-no-padding" ng-show="vm.post.post.files[5]">
-            <div class="col col-33 album-image" style="margin-right:5px" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.post.files[3].file_path}})'}">
-            </div>
-            <div class="col col-33 album-image" style="margin-right:5px" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.post.files[4].file_path}})'}">
-            </div>
-            <div class="col col-33 album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.post.files[5].file_path}})'}">
-            </div>
-        </div>-->
-
     </div>
 
 
@@ -77,22 +59,6 @@
             <div class="col col-100 album-image album-first-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.shared_post.files[0].file_path}})'}">
             </div>
         </div>
-
-        <!--<div class="row row-no-padding" style="margin-bottom:10px" ng-show="vm.post.shared_post.files[2]">
-            <div class="col col-50 album-image" style="margin-right:5px" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.shared_post.files[1].file_path}})'}">
-            </div>
-            <div class="col col-50 album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.shared_post.files[2].file_path}})'}">
-            </div>
-        </div>
-
-        <div class="row row-no-padding" ng-show="vm.post.shared_post.files[5]">
-            <div class="col col-33 album-image" style="margin-right:5px" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.shared_post.files[3].file_path}})'}">
-            </div>
-            <div class="col col-33 album-image" style="margin-right:5px" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.shared_post.files[4].file_path}})'}">
-            </div>
-            <div class="col col-33 album-image" ng-style="{'background-image': 'url({{vm.apiurl}}/uploads/images/{{vm.post.shared_post.files[5].file_path}})'}">
-            </div>
-        </div>-->
 
     </div>
 
