--- a/www/pages/notifications/notifications.html
+++ b/www/pages/notifications/notifications.html
@@ -14,13 +14,53 @@
 
   <ion-content padding="true" class="has-header">
 
-    <ion-list>
-      <ion-item class="item-avatar">
-        <img ng-src="#">
-        <h2>Omuke like dise tomuk er photo.</h2>
-        <p>2 din age</p>
-      </ion-item>
-    </ion-list>
+
+   <a href="" style="text-decoration:none">
+        <div class="row">
+        <!--profile image-->
+            <div style="padding-left:5px">
+              <div class="profile_image" style="background-image: url(img/shovon_pp.jpg)">
+                 <div class="pp-top"></div>
+                 <div class="pp-Bottom"></div>
+              </div>
+            </div>
+
+            <div class="col">
+                <div>
+                  <p>
+                    <span class="notification-profile-name">Shovon</span>
+                    <span class="noti-text-sec">likes your Post</span>
+                  </p>
+
+                  <p class="noti-time">1 days ago</p>
+                </div>
+            </div>
+        </div>
+    </a>
+
+
+    <a href="" style="text-decoration:none">
+         <div class="row">
+         <!--profile image-->
+             <div style="padding-left:5px">
+               <div class="profile_image" style="background-image: url(img/shovon_pp.jpg)">
+                  <div class="pp-top"></div>
+                  <div class="pp-Bottom"></div>
+               </div>
+             </div>
+
+             <div class="col">
+                 <div>
+                   <p>
+                     <span class="notification-profile-name">Shovon</span>
+                     <span class="noti-text-sec">likes your Post</span>
+                   </p>
+
+                   <p class="noti-time">1 days ago</p>
+                 </div>
+             </div>
+         </div>
+     </a>
 
 
   </ion-content>
