--- a/www/pages/notifications/notifications.html
+++ b/www/pages/notifications/notifications.html
@@ -27,7 +27,7 @@
 
             <div class="col">
                 <div>
-                  <p>
+                  <p class="item item-borderless item-text-wrap">
                     <span class="notification-profile-name">Shovon</span>
                     <span class="noti-text-sec">likes your Post</span>
                   </p>
