--- a/www/pages/friends/friends.html
+++ b/www/pages/friends/friends.html
@@ -14,6 +14,7 @@
 
   <ion-content padding="true" class="has-header">
 
+<!--Connection Request-->
     <a href="" style="text-decoration:none">
          <div class="row">
          <!--profile image-->
@@ -26,20 +27,52 @@
 
              <div class="col">
                  <div>
-                   <p class="item item-borderless item-text-wrap narrow-padding" style="margin-top:-15px;padding-bottom:-10px; background-color:transparent">
+                   <p class="item item-borderless item-text-wrap narrow-padding" style="margin-top:-5px;padding-bottom:-10px; background-color:transparent">
                      <span class="notification-profile-name">Saeef Minhaz Shovon</span>
                      <span class="noti-text-sec">sent you connection request</span>
                    </p>
 
-                   <div class="button-bar" style="padding:0; margin-top:-5px">
-                     <button class="button button-outline button-positive button-small ion-checkmark-round" style="border-radius:20px; font-size:10px;margin:5px"> Add</button>
-                     <button class="button button-outline button-assertive button-small ion-close-round" style="border-radius:20px; font-size:10px; margin:5px"> Cancel</button>
+                   <div class="button-bar" style="padding:0">
+                     <button class="button button-outline button-positive button-small ion-checkmark-round" style="border-radius:20px; font-size:10px;margin-right:5px"> Add</button>
+                     <button class="button button-outline button-assertive button-small ion-close-round" style="border-radius:20px; font-size:10px; margin-left:5px"> Cancel</button>
                    </div>
 
                  </div>
              </div>
          </div>
      </a>
+<!--./connection request-->
+
+
+<!--Suggested User-->
+    <a href="" style="text-decoration:none">
+         <div class="row">
+         <!--profile image-->
+             <div style="padding-left:5px">
+               <div class="profile_image" style="background-image: url(img/shovon_pp.jpg)">
+                  <div class="pp-top"></div>
+                  <div class="pp-Bottom"></div>
+               </div>
+             </div>
+
+             <div class="col">
+                 <div>
+                   <p class="item item-borderless item-text-wrap narrow-padding" style="margin-top:-5px;padding-bottom:-10px; background-color:transparent">
+                     <span class="notification-profile-name">Saeef Minhaz Shovon</span>
+                     <!-- <span class="noti-text-sec">sent you connection request</span> -->
+                   </p>
+
+                   <div class="button-bar" style="padding:0">
+                     <button class="button button-outline button-positive button-small" style="border-radius:20px; font-size:10px;margin-right:5px">Connect</button>
+                     <button class="button button-outline button-positive button-small" style="border-radius:20px; font-size:10px; margin-left:5px">Message</button>
+                   </div>
+
+                 </div>
+             </div>
+         </div>
+     </a>
+<!--./Suggested user-->
+
 
   </ion-content>
 </ion-view>
