--- a/www/pages/home/home.html
+++ b/www/pages/home/home.html
@@ -28,7 +28,7 @@
     </ion-segment>
   </div>
 
-  <ion-content padding="true" class="has-tabs-top">
+  <ion-content padding="true" class="has-subheader" style="background-color: #ccc;">
 
     <ion-refresher
       pulling-text="Pull to refresh..."
@@ -41,7 +41,7 @@
 <!-- avater and status -->
     <div class="list card">
 
-      <div class="item row">
+      <div class="item row ">
            <div class="col col-20">
                  <div class="profile_image" style="background-image: url({{vm.apiurl + vm.user.profileAvatar}})">
                     <div class="pp-top"></div>
