--- a/www/pages/friends/friends.html
+++ b/www/pages/friends/friends.html
@@ -15,39 +15,21 @@
   <ion-content padding="true" class="has-header">
 
 <!--Connection Request-->
-    <a href="" style="text-decoration:none">
-         <div class="row">
-         <!--profile image-->
-             <div style="padding-left:5px">
-               <div class="profile_image" style="background-image: url(img/shovon_pp.jpg)">
-                  <div class="pp-top"></div>
-                  <div class="pp-Bottom"></div>
-               </div>
-             </div>
-
-             <div class="col">
-                 <div>
-                   <p class="item item-borderless item-text-wrap narrow-padding" style="margin-top:-5px;padding-bottom:-10px; background-color:transparent">
-                     <span class="notification-profile-name">Saeef Minhaz Shovon</span>
-                     <span class="noti-text-sec">sent you connection request</span>
-                   </p>
-
-                   <div class="button-bar" style="padding:0">
-                     <button class="button button-outline button-positive button-small ion-checkmark-round" style="border-radius:20px; font-size:10px;margin-right:5px"> Add</button>
-                     <button class="button button-outline button-assertive button-small ion-close-round" style="border-radius:20px; font-size:10px; margin-left:5px"> Cancel</button>
-                   </div>
-
-                 </div>
-             </div>
+     <div class="card">
+         <div class="item item-image">
+            <img src="img/mr_bean.jpg">
          </div>
-     </a>
+
+         <h3>Mr. Bean</h3>
+
+     </div>
 <!--./connection request-->
 
 
 <!--Suggested User-->
-    <a href="" style="text-decoration:none">
+    <!-- <a href="" style="text-decoration:none">
          <div class="row">
-         <!--profile image-->
+
              <div style="padding-left:5px">
                <div class="profile_image" style="background-image: url(img/shovon_pp.jpg)">
                   <div class="pp-top"></div>
@@ -59,7 +41,7 @@
                  <div>
                    <p class="item item-borderless item-text-wrap narrow-padding" style="margin-top:-5px;padding-bottom:-10px; background-color:transparent">
                      <span class="notification-profile-name">Saeef Minhaz Shovon</span>
-                     <!-- <span class="noti-text-sec">sent you connection request</span> -->
+
                    </p>
 
                    <div class="button-bar" style="padding:0">
@@ -70,7 +52,7 @@
                  </div>
              </div>
          </div>
-     </a>
+     </a> -->
 <!--./Suggested user-->
 
 
