--- a/www/pages/messages/messages.html
+++ b/www/pages/messages/messages.html
@@ -14,6 +14,30 @@
 
   <ion-content padding="true" class="has-header">
 
+    <!--message_1-->
+       <a href="" style="text-decoration:none">
+            <div class="row">
+            <!--profile image-->
+                <div style="padding-left:5px">
+                  <div class="profile_image" style="background-image: url(img/shovon_pp.jpg)">
+                     <div class="pp-top"></div>
+                     <div class="pp-Bottom"></div>
+                  </div>
+                </div>
+
+                <div class="col">
+                    <div>
+                      <p class="item item-borderless item-text-wrap" style="background-color:transparent">
+                        <span class="notification-profile-name">Shovon</span>
+                        <span class="noti-text-sec">likes your Post</span>
+                      </p>
+
+                      <p class="noti-time">1 days ago</p>
+                    </div>
+                </div>
+            </div>
+        </a>
+      <!--./message_1-->
 
 
 
