--- a/www/pages/notifications/notifications.html
+++ b/www/pages/notifications/notifications.html
@@ -15,28 +15,30 @@
   <ion-content padding="true" class="has-header">
 
 
-   <a href="" style="text-decoration:none">
-        <div class="row">
-        <!--profile image-->
-            <div style="padding-left:5px">
-              <div class="profile_image" style="background-image: url(img/shovon_pp.jpg)">
-                 <div class="pp-top"></div>
-                 <div class="pp-Bottom"></div>
-              </div>
-            </div>
+    <!--notification_1-->
+       <a href="" style="text-decoration:none">
+            <div class="row">
+            <!--profile image-->
+                <div style="padding-left:5px">
+                  <div class="profile_image" style="background-image: url(img/shovon_pp.jpg)">
+                     <div class="pp-top"></div>
+                     <div class="pp-Bottom"></div>
+                  </div>
+                </div>
 
-            <div class="col">
-                <div>
-                  <p class="item item-borderless item-text-wrap">
-                    <span class="notification-profile-name">Shovon</span>
-                    <span class="noti-text-sec">likes your Post</span>
-                  </p>
+                <div class="col">
+                    <div>
+                      <p class="item item-borderless item-text-wrap">
+                        <span class="notification-profile-name">Shovon</span>
+                        <span class="noti-text-sec">likes your Post</span>
+                      </p>
 
-                  <p class="noti-time">1 days ago</p>
+                      <p class="noti-time">1 days ago</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </a>
+        </a>
+      <!--./notification_1-->
 
 
     <a href="" style="text-decoration:none">
