--- a/www/pages/friends/friends.html
+++ b/www/pages/friends/friends.html
@@ -15,14 +15,18 @@
   <ion-content padding="true" class="has-header">
 
 <!--Connection Request-->
-     <div class="card">
-         <div class="item item-image">
-            <img src="img/mr_bean.jpg">
+    <div>
+         <div class="card">
+             <div class="item item-image">
+                <img src="img/jonny_depp.jpg">
+             </div>
+             <h4 style="padding-left:10px">Jonny Depp</h4>
          </div>
-
-         <h3>Mr. Bean</h3>
-
-     </div>
+         <div class="button-bar">
+              <a class="button button-icon icon ion-checkmark-circled" style="color:#22c064;"></a>
+              <a class="button button-icon icon ion-close-circled" style="color:#22c064"></a>
+         </div>
+    </div>
 <!--./connection request-->
 
 
