--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <!-- your app's js -->
     <script src="app/app.js"></script>
     <script src="app/controllers.js"></script>
+    <script src="app/services.js"></script>
     <script src="app/routes.js"></script>
     <script src="pages/signin/signin-ctrl.js"></script>
     <script src="pages/signin/signin-factory.js"></script>
